炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


enum XC_OBJECT_TYPE  
{
	XC_ERROR = -1,   
	XC_NOTHING = 0,
	XC_WINDOW = 1,    
	XC_MODALWINDOW = 2,    
	XC_FRAMEWND = 3,    
	XC_FLOATWND = 4,    
	XC_COMBOBOXWINDOW = 11,   
	XC_POPUPMENUWINDOW = 12,  
	XC_POPUPMENUCHILDWINDOW = 13,   
	XC_OBJECT_UI = 19,   
	XC_WIDGET_UI = 20,
	XC_ELE = 21,   
	XC_ELE_LAYOUT = 53,   
	XC_BUTTON = 22,   
	XC_RICHEDIT = 23,   
	XC_COMBOBOX = 24,   
	XC_SCROLLBAR = 25,   
	XC_SCROLLVIEW = 26,   
	XC_LIST = 27,   
	XC_LISTBOX = 28,   
	XC_LISTVIEW = 29,   
	XC_TREE = 30,   
	XC_MENUBAR = 31,   
	XC_SLIDERBAR = 32,   
	XC_PROGRESSBAR = 33,   
	XC_TOOLBAR = 34,   
	XC_MONTHCAL = 35,   
	XC_DATETIME = 36,   
	XC_PROPERTYGRID = 37,   
	XC_RICHEDIT_COLOR = 38,   
	XC_RICHEDIT_SET = 39,   
	XC_TABBAR = 40,   
	XC_TEXTLINK = 41,   
	XC_PANE = 42,   
	XC_PANE_SPLIT = 43,   
	XC_MENUBAR_BUTTON = 44,   
							  XC_RICHEDIT_FILE = 50,   
							  XC_RICHEDIT_FOLDER = 51,   
							  XC_LIST_HEADER = 52,   
							  XC_SHAPE = 61,    
							  XC_SHAPE_TEXT = 62,    
							  XC_SHAPE_PICTURE = 63,    
							  XC_SHAPE_RECT = 64,    
							  XC_SHAPE_ELLIPSE = 65,    
							  XC_SHAPE_LINE = 66,    
							  XC_SHAPE_GROUPBOX = 67,    
							  XC_SHAPE_GIF = 68,    
													XC_MENU = 81,   
													XC_IMAGE = 82,         
													XC_IMAGE_TEXTURE = XC_IMAGE,   
													XC_HDRAW = 83,   
													XC_FONT = 84,   
													XC_FLASH = 85,   
													XC_PANE_CELL = 86,   
													XC_WEB = 87,   
													XC_IMAGE_FRAME = 88,   
													XC_LAYOUT_OBJECT = 101,   
													XC_ADAPTER = 102,   
													XC_ADAPTER_TABLE = 103,   
													XC_ADAPTER_TREE = 104,   
													XC_ADAPTER_LISTVIEW = 105,   
													XC_ADAPTER_MAP = 106,   
													XC_BKINFOM = 116, 
																	  XC_LAYOUT_LISTVIEW = 111,
																	  XC_LAYOUT_LIST = 112,
																	  XC_LAYOUT_OBJECT_GROUP = 113,
																	  XC_LAYOUT_OBJECT_ITEM = 114,
																	  XC_LAYOUT_PANEL = 115,
																	  XC_LIST_ITEM = 121,     
																	  XC_LISTVIEW_GROUP = 122,
																	  XC_LISTVIEW_ITEM = 123,
};
enum XC_OBJECT_TYPE_EX
{
	xc_ex_error = -1,   
	button_type_default = 0, 
	button_type_radio,     
	button_type_check,     
	button_type_close,     
	button_type_min,       
	button_type_max,       
	element_type_layout,   
};
enum  XC_OBJECT_STYLE
{
	xc_style_default = 0,
	button_style_default = xc_style_default,  
	button_style_check = 1,    
	button_style_radio = 2,    
	button_style_expand = 3,    
	button_style_scrollbar_left = 4,    
	button_style_scrollbar_right = 5,    
	button_style_scrollbar_up = 6,    
	button_style_scrollbar_down = 7,    
	button_style_scrollbar_slider_h = 8,    
	button_style_scrollbar_slider_v = 9,    
	button_style_tabBar_button = 10,   
	button_style_toolBar_left = 11,   
	button_style_toolBar_right = 12,   
	button_style_pane_close = 13,   
	button_style_pane_lock = 14,   
	button_style_pane_menu = 15,   
	button_style_pane_dockH = 16,   
	button_style_pane_dockV = 17,   
	xc_style_frameWnd_dock_left = 18,   
	xc_style_frameWnd_dock_top = 19,   
	xc_style_frameWnd_dock_right = 20,   
	xc_style_frameWnd_dock_bottom = 21,   
	xc_style_ToolBar_separator = 22,   
	xc_style_listBox_comboBox = 23,   
};
typedef void*   HXCGUI;       
typedef   struct lua_State lua_State;
enum  common_state3_
{
	common_state3_leave = 0,  
	common_state3_stay,     
	common_state3_down,     
};
enum  button_state_
{
	button_state_leave = 0,   
	button_state_stay,      
	button_state_down,      
	button_state_check,     
	button_state_disable,   
};
enum  button_icon_align_
{
	button_icon_align_left = 0,  
	button_icon_align_top,     
	button_icon_align_right,   
	button_icon_align_bottom,  
};
enum monthCal_button_type_
{
	monthCal_button_type_today = 0,  
	monthCal_button_type_last_year,  
	monthCal_button_type_next_year,  
	monthCal_button_type_last_month, 
	monthCal_button_type_next_month, 
};
XC_API HELE WINAPI XDateTime_Create(int x, int y, int cx, int cy, HXCGUI hParent);
XC_API void WINAPI XDateTime_SetStyle(HELE hEle, int nStyle);
XC_API int WINAPI XDateTime_GetStyle(HELE hEle);
XC_API void WINAPI XDateTime_EnableSplitSlash(HELE hEle, BOOL bSlash);
XC_API void WINAPI XDateTime_GetTime(HELE hEle, int* pnHour, int* pnMinute, int* pnSecond);
XC_API void WINAPI XDateTime_SetTime(HELE hEle, int nHour, int nMinute, int nSecond);
XC_API void WINAPI XDateTime_GetDate(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);
XC_API void WINAPI XDateTime_SetDate(HELE hEle, int nYear, int nMonth, int nDay);
XC_API COLORREF WINAPI XDateTime_GetSelBkColor(HELE hEle);
XC_API void WINAPI XDateTime_SetSelBkColor(HELE hEle, COLORREF crSelectBk, BYTE alpha = 255);
XC_API HELE WINAPI XDateTime_GetButton(HELE hEle, int nType);
XC_API HELE WINAPI XMonthCal_Create(int x, int y, int cx, int cy, HXCGUI hParent);
XC_API void WINAPI XMonthCal_SetToday(HELE hEle, int nYear, int nMonth, int nDay);
XC_API void WINAPI XMonthCal_GetToday(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);
XC_API void WINAPI XMonthCal_SeSelDate(HELE hEle, int nYear, int nMonth, int nDay);
XC_API void WINAPI XMonthCal_GetSelDate(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);
XC_API HELE WINAPI XMonthCal_GetButton(HELE hEle, monthCal_button_type_ nType);
XC_API lua_State* WINAPI XC_InitLua();
XC_API BOOL WINAPI XC_RunLua(const char*  pLuaFile);
XC_API BOOL WINAPI XC_ExitLua();
XC_API int WINAPI XC_UnicodeToAnsi(const wchar_t *pIn, int inLen, char *pOut, int outLen);
XC_API int WINAPI XC_AnsiToUnicode(const char *pIn, int inLen, wchar_t *pOut, int outLen);
XC_API void WINAPI XC_DebugToFileInfo(const char *pInfo);
XC_API BOOL WINAPI XC_IsHELE(HXCGUI hEle); 
XC_API BOOL WINAPI XC_IsHWINDOW(HXCGUI hWindow); 
XC_API BOOL WINAPI XC_IsShape(HXCGUI hShape); 
XC_API BOOL WINAPI XC_IsHXCGUI(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);
XC_API HWINDOW WINAPI XC_hWindowFromHWnd(HWND hWnd);
XC_API BOOL WINAPI XC_SetProperty(HXCGUI hXCGUI, const wchar_t* pName, const wchar_t* pValue);
XC_API const wchar_t* WINAPI XC_GetProperty(HXCGUI hXCGUI, const wchar_t* pName);
XC_API BOOL WINAPI XC_RegisterWindowClassName(const wchar_t* pClassName); 
XC_API BOOL WINAPI XC_IsSViewExtend(HELE hEle);  
XC_API XC_OBJECT_TYPE WINAPI XC_GetObjectType(HXCGUI hXCGUI);
XC_API HXCGUI WINAPI XC_GetObjectByID(HWINDOW hWindow, int nID); 
XC_API HXCGUI WINAPI XC_GetObjectByIDName(HWINDOW hWindow, const wchar_t*  pName);
XC_API HXCGUI WINAPI XC_GetObjectByUID(int nUID);
XC_API HXCGUI WINAPI XC_GetObjectByUIDName(const wchar_t*  pName);
XC_API void WINAPI XC_SetPaintFrequency(int nMilliseconds); 
XC_API void WINAPI XC_SetTextRenderingHint(int  nType);   
XC_API BOOL WINAPI XC_RectInRect(RECT *pRect1, RECT *pRect2);
XC_API void WINAPI XC_CombineRect(RECT *pDest, RECT *pSrc1, RECT *pSrc2);
XC_API void WINAPI XC_ShowLayoutFrame(BOOL bShow);
XC_API void WINAPI XC_EnableDebugFile(BOOL bEnable);
XC_API void WINAPI XC_SetLayoutFrameColor(COLORREF color);
XC_API void WINAPI XC_EnableErrorMessageBox(BOOL bEnabel);
XC_API HXCGUI WINAPI XC_LoadLayout(const wchar_t *pFileName, HXCGUI hParent = NULL);
XC_API HXCGUI WINAPI XC_LoadLayoutFromString(const char *pStringXML, HXCGUI hParent = NULL);
XC_API BOOL WINAPI XC_LoadResource(const wchar_t *pFileName, const wchar_t *pDir = NULL);
XC_API BOOL WINAPI XC_LoadResourceFromString(const char *pStringXML, const wchar_t* pFileName, const wchar_t *pDir = NULL);
XC_API BOOL WINAPI XC_LoadStyle(const wchar_t *pFileName, const wchar_t *pDir = NULL);
XC_API void WINAPI XC_GetTextSize(const wchar_t* pString, int length, HFONTX hFontX, out_ SIZE* pOutSize);
XC_API void WINAPI XC_GetTextShowSize(const wchar_t* pString, int length, HFONTX hFontX, out_ SIZE* pOutSize);
XC_API HFONTX WINAPI XC_GetDefaultFont(); 
XC_API void   WINAPI XC_SetDefaultFont(HFONTX hFontX); 
XC_API void  WINAPI XC_InitFont(LOGFONTW *pFont, wchar_t *pName, int size, BOOL bBold = FALSE, BOOL bItalic = FALSE, BOOL bUnderline = FALSE, BOOL bStrikeOut = FALSE);
XC_API  void* WINAPI XC_Malloc(int size);
XC_API  void  WINAPI XC_Free(void *p);
XC_API void WINAPI _XC_SetType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);
XC_API void WINAPI _XC_AddType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);
XC_API void WINAPI _XC_BindData(HXCGUI hXCGUI, int data);
XC_API int  WINAPI _XC_GetBindData(HXCGUI hXCGUI);
XC_API BOOL WINAPI XInitXCGUI(wchar_t *pText = NULL);
XC_API void WINAPI XRunXCGUI();
XC_API void WINAPI XExitXCGUI();
XC_API XC_OBJECT_TYPE    WINAPI XObj_GetType(HXCGUI hXCGUI);
XC_API XC_OBJECT_TYPE_EX WINAPI XObj_GetTypeEx(HXCGUI hXCGUI);
XC_API void              WINAPI XUI_SetStyle(HXCGUI hXCGUI, XC_OBJECT_STYLE nStyle);
XC_API XC_OBJECT_STYLE   WINAPI XUI_GetStyle(HXCGUI hXCGUI);
XC_API HBKM WINAPI XBkM_Create();
XC_API void WINAPI XBkM_Destroy(HBKM hBkInfoM);
XC_API int  WINAPI XBkM_SetBkInfo(HBKM hBkInfoM, const wchar_t *pText);
XC_API int  WINAPI XBkM_AddInfo(HBKM hBkInfoM, const wchar_t *pText);
XC_API void WINAPI XBkM_AddBorder(HBKM hBkInfoM, int nState, COLORREF color, BYTE alpha, int width);
XC_API void WINAPI XBkM_AddFill(HBKM hBkInfoM, int nState, COLORREF color, BYTE alpha);
XC_API void WINAPI XBkM_AddImage(HBKM hBkInfoM, int nState, HIMAGE hImage);
XC_API int  WINAPI XBkM_GetCount(HBKM hBkInfoM);
XC_API void WINAPI XBkM_Clear(HBKM hBkInfoM);
XC_API BOOL WINAPI XBkM_Draw(HBKM hBkInfoM, int nState, HDRAW hDraw, RECT* pRect);
XC_API BOOL WINAPI XBkM_DrawEx(HBKM hBkInfoM, int nState, HDRAW hDraw, RECT* pRect, int nStateEx);
XC_API HELE WINAPI XBtn_Create(int x, int y, int cx, int cy, const wchar_t *pName, HXCGUI hParent = NULL);
XC_API BOOL WINAPI XBtn_IsCheck(HELE hEle); 
XC_API BOOL WINAPI XBtn_SetCheck(HELE hEle, BOOL bCheck);
XC_API void WINAPI XBtn_SetState(HELE hEle, common_state3_ nState);
XC_API common_state3_  WINAPI XBtn_GetState(HELE hEle);
XC_API button_state_   WINAPI XBtn_GetStateEx(HELE hEle);
XC_API void WINAPI XBtn_SetStyle(HELE hEle, XC_OBJECT_STYLE  nStyle);
XC_API XC_OBJECT_STYLE  WINAPI XBtn_GetStyle(HELE hEle);
XC_API void WINAPI XBtn_SetType(HELE hEle, XC_OBJECT_TYPE_EX nType);
XC_API void WINAPI XBtn_SetTypeEx(HELE hEle, XC_OBJECT_TYPE_EX nType);
XC_API XC_OBJECT_TYPE_EX  WINAPI XBtn_GetType(HELE hEle);
XC_API void WINAPI XBtn_SetGroupID(HELE hEle, int nID);
XC_API int  WINAPI XBtn_GetGroupID(HELE hEle);
XC_API void WINAPI XBtn_SetBindEle(HELE hEle, HELE hBindEle);
XC_API HELE WINAPI XBtn_GetBindEle(HELE hEle);
XC_API void WINAPI XBtn_SetTextAlign(HELE hEle, int nFlags);
XC_API int  WINAPI XBtn_GetTextAlign(HELE hEle);
XC_API void WINAPI XBtn_SetIconAlign(HELE hEle, button_icon_align_ align);
XC_API void WINAPI XBtn_SetOffset(HELE hEle, int x, int y);
XC_API void WINAPI XBtn_SetOffsetIcon(HELE hEle, int x, int y);
XC_API void WINAPI XBtn_SetIconSpace(HELE hEle, int size);
XC_API void WINAPI XBtn_GetText(HELE hEle, out_ wchar_t *pOut, int nOutLen);
XC_API void WINAPI XBtn_SetText(HELE hEle, in_ const wchar_t *pName);
XC_API void WINAPI XBtn_SetIcon(HELE hEle, HIMAGE hImage);
XC_API void WINAPI XBtn_SetIconDisable(HELE hEle, HIMAGE hImage);
XC_API HIMAGE WINAPI XBtn_GetIcon(HELE hEle, int nType);
XC_API void WINAPI XBtn_AddAnimationFrame(HELE hEle, HIMAGE hImage, UINT uElapse);
XC_API void WINAPI XBtn_EnableAnimation(HELE hEle, BOOL bEnable, BOOL bLoopPlay = FALSE);
XC_API void WINAPI XBtn_AddBkBorder(HELE hEle, button_state_ nState, COLORREF color, BYTE alpha, int width);
XC_API void WINAPI XBtn_AddBkFill(HELE hEle, button_state_ nState, COLORREF color, BYTE alpha);
XC_API void WINAPI XBtn_AddBkImage(HELE hEle, button_state_ nState, HIMAGE hImage);
XC_API int  WINAPI XBtn_GetBkInfoCount(HELE hEle);
XC_API void WINAPI XBtn_ClearBkInfo(HELE hEle);
XC_API HELE WINAPI XComboBox_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);
XC_API BOOL  WINAPI XComboBox_SetSelItem(HELE hEle, int iIndex);
XC_API void WINAPI XComboBox_GetButtonRect(HELE hEle, out_ RECT* pRect);
XC_API int    WINAPI XRes_GetIDValue(const wchar_t *pName);  
XC_API HIMAGE WINAPI XRes_GetImage(const wchar_t *pName);  
XC_API HIMAGE WINAPI XRes_GetImageEx(const wchar_t *pFileName, const wchar_t *pName); 
XC_API COLORREF WINAPI XRes_GetColor(const wchar_t *pName);  
XC_API HFONTX   WINAPI XRes_GetFont(const wchar_t *pName);  
XC_API HBKM     WINAPI XRes_GetBkM(const wchar_t *pName);  