炫彩编程助手/Data/DemoMgr/Delphi/Lib/XCGUI.pas


function XDateTime_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XDateTime_SetStyle (hEle:Integer;nStyle:Integer);stdcall;far; external 'xcgui.dll';
function XDateTime_GetStyle (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XDateTime_EnableSplitSlash (hEle:Integer;bSlash:LongBool);stdcall;far; external 'xcgui.dll';
procedure XDateTime_GetTime (hEle:Integer;pnHour:Integer;pnMinute:Integer;pnSecond:Integer);stdcall;far; external 'xcgui.dll';
procedure XDateTime_SetTime (hEle:Integer;nHour:Integer;nMinute:Integer;nSecond:Integer);stdcall;far; external 'xcgui.dll';
procedure XDateTime_GetDate (hEle:Integer;pnYear:Integer;pnMonth:Integer;pnDay:Integer);stdcall;far; external 'xcgui.dll';
procedure XDateTime_SetDate (hEle:Integer;nYear:Integer;nMonth:Integer;nDay:Integer);stdcall;far; external 'xcgui.dll';
function XDateTime_GetSelBkColor (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XDateTime_SetSelBkColor (hEle:Integer;crSelectBk:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XDateTime_GetButton (hEle:Integer;nType:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XMonthCal_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XMonthCal_SetToday (hEle:Integer;nYear:Integer;nMonth:Integer;nDay:Integer);stdcall;far; external 'xcgui.dll';
procedure XMonthCal_GetToday (hEle:Integer;pnYear:Integer;pnMonth:Integer;pnDay:Integer);stdcall;far; external 'xcgui.dll';
procedure XMonthCal_SeSelDate (hEle:Integer;nYear:Integer;nMonth:Integer;nDay:Integer);stdcall;far; external 'xcgui.dll';
procedure XMonthCal_GetSelDate (hEle:Integer;pnYear:Integer;pnMonth:Integer;pnDay:Integer);stdcall;far; external 'xcgui.dll';
function XMonthCal_GetButton (hEle:Integer;nType:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XC_InitLua ();stdcall;far; external 'xcgui.dll';
function XC_RunLua (pLuaFile:PChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_ExitLua () : LongBool;stdcall;far; external 'xcgui.dll';
function XC_UnicodeToAnsi (pIn:PWideChar;inLen:Integer;pOut:PChar;outLen:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XC_AnsiToUnicode (pIn:PChar;inLen:Integer;pOut:PWideChar;outLen:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XC_DebugToFileInfo (pInfo:PChar);stdcall;far; external 'xcgui.dll';
function XC_IsHELE (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_IsHWINDOW (hWindow:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_IsShape (hShape:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_IsHXCGUI (hXCGUI:Integer;nType:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_hWindowFromHWnd (hWnd:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XC_SetProperty (hXCGUI:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_GetProperty (hXCGUI:Integer;pName:PWideChar) : PWideChar;stdcall;far; external 'xcgui.dll';
function XC_RegisterWindowClassName (pClassName:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_IsSViewExtend (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_GetObjectType (hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XC_GetObjectByID (hWindow:Integer;nID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XC_GetObjectByIDName (hWindow:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XC_GetObjectByUID (nUID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XC_GetObjectByUIDName (pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XRes_GetIDValue (pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XRes_GetImage (pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XRes_GetImageEx (pFileName:PWideChar;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XRes_GetColor (pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XRes_GetFont (pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XRes_GetBkM (pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
procedure XC_SetPaintFrequency (nMilliseconds:Integer);stdcall;far; external 'xcgui.dll';
procedure XC_SetTextRenderingHint (nType:Integer);stdcall;far; external 'xcgui.dll';
function XC_RectInRect (pRect1:TRECT;pRect2:TRECT) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XC_CombineRect (pDest:TRECT;pSrc1:TRECT;pSrc2:TRECT);stdcall;far; external 'xcgui.dll';
procedure XC_ShowLayoutFrame (bShow:LongBool);stdcall;far; external 'xcgui.dll';
procedure XC_EnableDebugFile (bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XC_SetLayoutFrameColor (color:Integer);stdcall;far; external 'xcgui.dll';
procedure XC_EnableErrorMessageBox (bEnabel:LongBool);stdcall;far; external 'xcgui.dll';
function XC_LoadLayout (pFileName:PWideChar;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XC_LoadLayoutFromString (pStringXML:PChar;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XC_LoadResource (pFileName:PWideChar;pDir:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_LoadResourceFromString (pStringXML:PChar;pFileName:PWideChar;pDir:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XC_LoadStyle (pFileName:PWideChar;pDir:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XC_GetTextSize (pString:PWideChar;length:Integer;hFontX:Integer;pOutSize:TSIZE);stdcall;far; external 'xcgui.dll';
procedure XC_GetTextShowSize (pString:PWideChar;length:Integer;hFontX:Integer;pOutSize:TSIZE);stdcall;far; external 'xcgui.dll';
function XC_GetDefaultFont () : Integer;stdcall;far; external 'xcgui.dll';
procedure XC_SetDefaultFont (hFontX:Integer);stdcall;far; external 'xcgui.dll';
procedure XC_InitFont (pFont:TLOGFONTW;pName:PWideChar;size:Integer;bBold:LongBool;bItalic:LongBool;bUnderline:LongBool;bStrikeOut:LongBool);stdcall;far; external 'xcgui.dll';
function XC_Malloc (size:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XC_Free (p:Integer);stdcall;far; external 'xcgui.dll';
procedure _XC_SetType (hXCGUI:Integer;nType:Integer);stdcall;far; external 'xcgui.dll';
procedure _XC_AddType (hXCGUI:Integer;nType:Integer);stdcall;far; external 'xcgui.dll';
procedure _XC_BindData (hXCGUI:Integer;data:Integer);stdcall;far; external 'xcgui.dll';
function _XC_GetBindData (hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XInitXCGUI (pText:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XRunXCGUI ();stdcall;far; external 'xcgui.dll';
procedure XExitXCGUI ();stdcall;far; external 'xcgui.dll';
function XObj_GetType (hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XObj_GetTypeEx (hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XUI_SetStyle (hXCGUI:Integer;nStyle:Integer);stdcall;far; external 'xcgui.dll';
function XUI_GetStyle (hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XBkM_Create () : Integer;stdcall;far; external 'xcgui.dll';
procedure XBkM_Destroy (hBkInfoM:Integer);stdcall;far; external 'xcgui.dll';
function XBkM_SetBkInfo (hBkInfoM:Integer;pText:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XBkM_AddInfo (hBkInfoM:Integer;pText:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBkM_AddBorder (hBkInfoM:Integer;nState:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XBkM_AddFill (hBkInfoM:Integer;nState:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XBkM_AddImage (hBkInfoM:Integer;nState:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XBkM_GetCount (hBkInfoM:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBkM_Clear (hBkInfoM:Integer);stdcall;far; external 'xcgui.dll';
function XBkM_Draw (hBkInfoM:Integer;nState:Integer;hDraw:Integer;pRect:TRECT) : LongBool;stdcall;far; external 'xcgui.dll';
function XBkM_DrawEx (hBkInfoM:Integer;nState:Integer;hDraw:Integer;pRect:TRECT;nStateFilter:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XBtn_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;pName:PWideChar;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XBtn_IsCheck (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XBtn_SetCheck (hEle:Integer;bCheck:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XBtn_SetState (hEle:Integer;nState:Integer);stdcall;far; external 'xcgui.dll';
function XBtn_GetState (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XBtn_GetStateEx (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBtn_SetStyle (hEle:Integer;nStyle:Integer);stdcall;far; external 'xcgui.dll';
function XBtn_GetStyle (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBtn_SetType (hEle:Integer;nType:Integer);stdcall;far; external 'xcgui.dll';
procedure XBtn_SetTypeEx (hEle:Integer;nType:Integer);stdcall;far; external 'xcgui.dll';
function XBtn_GetType (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBtn_SetGroupID (hEle:Integer;nID:Integer);stdcall;far; external 'xcgui.dll';
function XBtn_GetGroupID (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBtn_SetBindEle (hEle:Integer;hBindEle:Integer);stdcall;far; external 'xcgui.dll';
function XBtn_GetBindEle (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBtn_SetTextAlign (hEle:Integer;nFlags:Integer);stdcall;far; external 'xcgui.dll';
function XBtn_GetTextAlign (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBtn_SetIconAlign (hEle:Integer;align:Integer);stdcall;far; external 'xcgui.dll';
procedure XBtn_SetOffset (hEle:Integer;x:Integer;y:Integer);stdcall;far; external 'xcgui.dll';
procedure XBtn_SetOffsetIcon (hEle:Integer;x:Integer;y:Integer);stdcall;far; external 'xcgui.dll';
procedure XBtn_SetIconSpace (hEle:Integer;size:Integer);stdcall;far; external 'xcgui.dll';
procedure XBtn_GetText (hEle:Integer;pOut:PWideChar;nOutLen:Integer);stdcall;far; external 'xcgui.dll';
procedure XBtn_SetText (hEle:Integer;pName:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XBtn_SetIcon (hEle:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
procedure XBtn_SetIconDisable (hEle:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XBtn_GetIcon (hEle:Integer;nType:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBtn_AddAnimationFrame (hEle:Integer;hImage:Integer;uElapse:Integer);stdcall;far; external 'xcgui.dll';
procedure XBtn_EnableAnimation (hEle:Integer;bEnable:LongBool;bLoopPlay:LongBool);stdcall;far; external 'xcgui.dll';
procedure XBtn_AddBkBorder (hEle:Integer;nState:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XBtn_AddBkFill (hEle:Integer;nState:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XBtn_AddBkImage (hEle:Integer;nState:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XBtn_GetBkInfoCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XBtn_ClearBkInfo (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XComboBox_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XComboBox_SetSelItem (hEle:Integer;iIndex:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XComboBox_GetButtonRect (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
